src/objects/SVNObj__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestBuild__c</fullName>
        <label>TestBuild</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCFiled__c</fullName>
        <label>VCFiled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SVNObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SVNObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SVNObj</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>